--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "ain": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm app.js"
+    "start": "npm start"
   },
   "author": "",
   "license": "ISC",
